I think I've fixed all the circular ordering issues now.  Both the Tableau and the split systems now represent 1-based indexes, which will be the same as what is output to the user, so it makes more sense when debugging.  The tradeoff is that there is a lot of +1 -1 around the code base to do the necessary translatations.
We still have the annoying bug with netmake, where if we get an element in C to be == 2, then a division by 0 occurs.  This needs to be fixed!  I've disabled the unit and integration tests that trigger this code for now.